ci: Defining Database, profiles, docker file and secrets

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,5 +1,7 @@
 spring:
   application:
     name: accounts
+  profiles:
+      active: ${SPRING_PROFILE:dev}
 server:
   port: ${AUTH_SERVICE_PORT:8080} #Default port 8080
