--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -2,6 +2,6 @@ spring:
   application:
     name: accounts
   profiles:
-      active: ${SPRING_PROFILE:dev}
+      active: ${SPRING_PROFILE:env}
 server:
   port: ${AUTH_SERVICE_PORT:8080} #Default port 8080
