--- a/docker/docker-compose.test.yml
+++ b/docker/docker-compose.test.yml
@@ -8,7 +8,8 @@ services:
       - 5432:5432
     volumes:
       - psql-data:/var/lib/postgresql/data
-      - ../src/main/resources/init-db/init.sql:/docker-entrypoint-initdb.d/data.sql
+      - ../src/main/resources/init-db/tables.sql:/docker-entrypoint-initdb.d/tables.sql
+      - ../src/main/resources/init-db/procedures.sql:/docker-entrypoint-initdb.d/procedures.sql
       - ./init/role.sh:/docker-entrypoint-initdb.d/role.sh
     environment:
       - POSTGRES_USER=${AUTHAPI_POSTGRES_USER}
