--- a/src/main/resources/application-dev.yml
+++ b/src/main/resources/application-dev.yml
@@ -3,7 +3,7 @@ spring:
     url: jdbc:h2:mem:public
     driverClassName: org.h2.Driver
     username: sa
-    password:
+    password: test
     initialization-mode: always
   jpa:
     database-platform: org.hibernate.dialect.H2Dialect
@@ -13,4 +13,4 @@ spring:
   sql:
     init:
       mode: always
-      schema-locations: classpath:init-db/init.sql
+      schema-locations: classpath:init-db/tables.sql,classpath:init-db/h2-ddl.sql
