--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -3,5 +3,9 @@ spring:
     name: accounts
   profiles:
       active: ${SPRING_PROFILE:dev}
+api:
+  security:
+    token:
+      secret: ${JWT_SECRET:my-secret-key}
 server:
   port: ${AUTH_SERVICE_PORT:8080} #Default port 8080
